fixed img borders on IE mobil

--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -22,6 +22,9 @@
   font-size: 16px;
   line-height: 1.5em; }
 
+a img {
+  border: 0; }
+
 body {
   background-color: #fafafa;
   color: #333;
