--- a/source/scss/1-tools/reset.scss
+++ b/source/scss/1-tools/reset.scss
@@ -5,3 +5,7 @@
 	font-size: 16px;
 	line-height: 1.5em;
 }
+// fix for borders on IE mobile
+a img {
+    border: 0;
+}
